--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ TweetDeck/bin/x86/Release/debug.log
 TweetDeck/bin/x86/Release/f_00001b
 TweetDeck/bin/x86/Release/GPUCache/data_1
 TweetDeck/bin/x86/Release/chromeData/ChromeDWriteFontCache
+TweetDeck/bin/x86/Release/chromeData/f_000008
